--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.3.0
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         WeDesign
+Theme URI:          https://oscarolotu.com/wedesign/
+Description:        A WordPress theme for WeDesign Tz
+Version:            o.1.0
+Author:             Oscar Olotu
+Author URI:         https://oscarolotu.com/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
