Fixed Testimoanial Client Image upload && changed part of the front page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         WeDesign
+Theme Name:         We-Design Tanzania
 Theme URI:          https://oscarolotu.com/wedesign/
 Description:        A WordPress theme for WeDesign Tz
 Version:            o.1.0
