--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -13,3 +13,35 @@
   @extend .btn;
   @extend .btn-default;
 }
+
+#subscribe-email input {
+  display: block;
+  width: 100%;
+}
+
+input[type=email] {
+  height: 45px;
+  border-radius: 4px;
+  border: none;
+  margin: 0 0 15px;
+  padding: 0 15px;
+  font-size: 0.928571em;
+  background-color: rgba(255,255,255,0.2);
+}
+
+input[type=submit] {
+  display: block;
+  width: 100%;
+  height: 45px;
+  font-weight: 600;
+  color: $white;
+  text-transform: uppercase;
+  border-radius: 4px;
+  border: none;
+  background-color: $color_tulip_tree_approx;
+  -webkit-transition: background-color 0.2s ease-in-out;
+  -moz-transition: background-color 0.2s ease-in-out;
+  -ms-transition: background-color 0.2s ease-in-out;
+  -o-transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
+}
