--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -16,17 +16,23 @@
 
 #subscribe-email input {
   display: block;
-  width: 100%;
-}
-
-input[type=email] {
+  width: 100% !important;
   height: 45px;
-  border-radius: 4px;
   border: none;
   margin: 0 0 15px;
   padding: 0 15px;
   font-size: 0.928571em;
   background-color: rgba(255,255,255,0.2);
+  line-height: 1.428571429;
+  color: gray;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 input[type=submit] {
