Fixed some errors with nav and bootsrap toggle on home page plus alot of refactor

--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -27,7 +27,7 @@
   padding: 30px;
 }
 .about-section .items-wrapper .item-title {
-  color: #40babd;
+  color: $color_viking_approx;
   font-size: 18px;
   font-weight: bold;
   margin: 0;
