--- a/assets/styles/components/_forms.scss
+++ b/assets/styles/components/_forms.scss
@@ -24,7 +24,7 @@
   font-size: 0.928571em;
   background-color: rgba(255,255,255,0.2);
   line-height: 1.428571429;
-  color: gray;
+  color: $white;
   background-image: none;
   border: 1px solid #ccc;
   border-radius: 4px;
