Cleaned some code, fixed excerpt not working on pages and finnished up the ajax contact form

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:         We-Design Tanzania
-Theme URI:          https://oscarolotu.com/wedesign/
-Description:        A WordPress theme for WeDesign Tz
-Version:            o.1.0
+Theme Name:         MinShock Labs
+Theme URI:          https://oscarolotu.com/minshock/
+Description:        A WordPress theme for MinShock Labs
+Version:            o.1.1
 Author:             Oscar Olotu
 Author URI:         https://oscarolotu.com/
 
